--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+woudc-extcsv (0.1.3) unstable; urgency=low
+
+  * fix comma handling
+
+ -- Tom Kralidis <tom.kralidis@canada.ca>  Wed, 29 Mar 2017 14:33:54 +0000
+
 woudc-extcsv (0.1.2) unstable; urgency=low
 
   * table level presence checks
