--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+woudc-extcsv (0.2.0) unstable; urgency=low
+
+  * add file validation
+
+ -- Tom Kralidis <tom.kralidis@canada.ca>  Thu, 07 Dec 2017 14:26:08 +0000
+
 woudc-extcsv (0.1.3) unstable; urgency=low
 
   * fix comma handling
