--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+woudc-extcsv (0.3.0) unstable; urgency=low
+
+  * add Python 3 support, drop Python 2 support
+
+ -- Tom Kralidis <tom.kralidis@canada.ca>  Mon, 17 Jun 2019 21:07:49 +0000
+
 woudc-extcsv (0.2.2) unstable; urgency=low
 
   * add support for opening non-ascii files
