--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+woudc-extcsv (0.3.1) unstable; urgency=low
+
+  * bump for packaging
+
+ -- Tom Kralidis <tom.kralidis@canada.ca>  Mon, 17 Jun 2019 22:55:05 +0000
+
 woudc-extcsv (0.3.0) unstable; urgency=low
 
   * add Python 3 support, drop Python 2 support
