--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+woudc-extcsv (0.5.0) unstable; urgency=low
+
+  * swap in woudc-data-registry extended csv parser
+  * make corresponding changes to Reader and Writer classes
+
+ -- WOUDC <ec.woudc.ec@canada.ca>  Wed, 06 Jul 2022 14:56:00 +0000
+
 woudc-extcsv (0.4.dev0) unstable; urgency=low
 
   * Updated example tests for Python3
