--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+woudc-extcsv (0.4.dev0) unstable; urgency=low
+
+  * Updated example tests for Python3
+
+ -- Kevin Ngai <kevin.ngai@ec.gc.ca>  Wed, 6 Jul 2022 14:27:00 +0000
+
 woudc-extcsv (0.3.1) unstable; urgency=low
 
   * bump for packaging
